moved content into wrapper div to resolve overflow issue on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,6 +12,7 @@ body, html {
 	height: 100%;
 	width: 100%;
 	overflow: hidden;
+	position: fixed;
 }
 
 property-search a:not(.btn), property-search a:active:not(.btn), property-search a:visited:not(.btn) {
